Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI429.H

typedef int INT;
typedef unsigned short USHORT;
typedef unsigned long ULONG;
typedef unsigned long MSGADDR;
typedef struct
{
	MSGADDR	addr;
	ULONG	data;
} MSGSTRUCT429;
typedef struct
{
    USHORT msgopt;              //Driver writes message options
    USHORT msgact;              //Card writes message activity
    union {
        ULONG  msgdata;         //Card/User writes message data (Rcv/Xmt)
        ULONG  listptr;         //Driver writes list buffer pointer
    };
    union {
        ULONG  timetag;         //Card writes timetag
        ULONG  hitcount;        //Card writes hit count
    };
    union {
        ULONG  maxtime;         //Card writes max time
        ULONG  elapsetime;      //Card writes elapsed time
    };
    ULONG  mintime;             //Card writes min time
    ULONG  userptr;             //Driver writes user code pointer
    ULONG  timetagh;            //Card writes extended timetag
    USHORT decgap;              //Card writes measured decoder gap time (rsvd for xmt msg)
    USHORT paramflag;           //Driver/User writes parametric bitrate configuration
} MSGFIELDS429;
typedef struct
{
	INT		highvolt;		// Absolute voltage of the first half of one-bit (in millivolts)
	INT		lowvolt;		// Absolute voltage of the second half of one-bit (in millivolts)
	INT		nullvolt;		// Absolute voltage of the second half of one-bit (in millivolts)
	INT		highrise;		// rise and fall time of the one-bit (in nanoseconds)
	INT		lowrise;		// Rise and fall time of the zero-bit (in nanoseconds)
	INT		biasvolt;		// Common-mode bias of the entire signal (in millivolts)
} PARAMFIELDS429;