Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI429NET.CS

using System;
using System.Runtime.InteropServices;

namespace BALLARD
{
    public class BTI429
    {
        /**
        *
        *  BTI429 WIN32 DRIVER  Version 1.12.5  (01/27/2015)
        *  Copyright (c) 2001-2015
        *  Ballard Technology, Inc.
        *  www.ballardtech.com
        *  support@ballardtech.com
        *  ALL RIGHTS RESERVED
        *
        *  NAME:   BTI429NET.CS -- C# 32-bit/64-bit
        *                      BTI429 Driver Include Header File.
        *
        **/

        /**
        *
        *  Structs used by the BTI429 Driver.
        *
        **/

        [StructLayout(LayoutKind.Sequential)]
        public struct MSGSTRUCT429
        {
            public UInt32 addr;
            public UInt32 data;
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct MSGFIELDS429
        {
            public UInt16 msgopt;              //Driver writes message optionvals
            public UInt16 msgact;              //Card writes message activity
            public UInt32 msgdata_listptr; //Card/User writes message data (Rcv/Xmt) - //Driver writes list buffer pointer
            public UInt32 timetag_hitcount; //Card writes timetag - //Card writes hit count
            public UInt32 maxtime_elapsetime; //Card writes max time - //Card writes elapsed time
            public UInt32 mintime;             //Card writes min time
            public UInt32 userptr;             //Driver writes user code pointer
            public UInt32 timetagh;            //Card writes extended timetag
            public UInt16 decgap;              //Card writes measured decoder gap time (rsvd for xmt msg)
            public UInt16 paramflag;           //Driver/User writes parametric bitrate configuration
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct PARAMFIELDS429
        {
            public Int32 highvolt;  // Absolute voltage of the first half of one-bit (in millivolts)
            public Int32 lowvolt;  // Absolute voltage of the second half of one-bit (in millivolts)
            public Int32 nullvolt;  // Absolute voltage of the second half of one-bit (in millivolts)
            public Int32 highrise;  // rise and fall time of the one-bit (in nanoseconds)
            public Int32 lowrise;  // Rise and fall time of the zero-bit (in nanoseconds)
        }

        /**
        *
        *  BTI429 Driver functions.
        *
        **/

        /**
        *
        *  Internal functions used by the BTI429 Driver.
        *
        **/
